cabal-version:       >=1.10
name:                servant-cognito-tutorial
version:             0.1.0.0
synopsis:            Servant + AWS Cognito tutorial and example application.
bug-reports:         https://github.com/ixmatus/Haskell-Servant-Cognito-Tutorial/issues
license:             PublicDomain
-- license:            CC0
license-file:        LICENSE
author:              Parnell Springmeyer
maintainer:          parnell@digitalmentat.com
copyright:           Public domain via CC0
category:            Executable
build-type:          Simple
extra-source-files:  README.md

source-repository head
  type:                 git
  location:             https://github.com/ixmatus/Haskell-Servant-Cognito-Tutorial

library
  default-language:    Haskell2010
  hs-source-dirs:      src

  exposed-modules:     Tutorial.Server
                     , Tutorial.API

  default-extensions:  BangPatterns
                     , BlockArguments
                     , DataKinds
                     , DefaultSignatures
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DerivingStrategies
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , LambdaCase
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications

  ghc-options:         -Wall
                       -Werror
                       -fwarn-tabs
                       -fno-warn-orphans
                       -fno-warn-unused-do-bind

  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , bytestring
                     , oidc-client
                     , optparse-applicative
                     , optparse-generic
                     , relude
                     , servant
                     , servant-server
                     , text
                     , wai
                     , warp
                     , network-simple

executable servant-cognito-tutorial
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >= 4.9 && < 5
                     , servant-cognito-tutorial
  default-language:    Haskell2010
